tests/type_check/hll_diagnostics_type_checking.err.expected
error: at 8:11: [HTC-UndeclaredVariable] In function 'test_silenced_error': undeclared variable 'undeclared_var'
   |
 8 |   let x = undeclared_var;
   |           ^^^^^^^^^^^^^^
error: at 18:16: [HTC-TypeMismatch] In function 'test_int_var_mismatch_with_float': type mismatch: expected integer type, found f64
    |
 18 |   let y: f64 = x;
    |                ^
error: at 23:16: [HTC-TypeMismatch] In function 'test_float_var_mismatch_with_int': type mismatch: expected float type, found i64
    |
 23 |   let y: i64 = x;
    |                ^
error: at 29:11: [HTC-UndeclaredVariable] In function 'test_undeclared_variable': undeclared variable 'y'
    |
 29 |   let x = y;
    |           ^
error: at 36:9: [HTC-TypeMismatch] In function 'test_defer_type_mismatch': type mismatch: expected integer type, found unit
    |
 36 |   defer 42;
    |         ^^
error: at 44:8: [HTC-UnknownAbi] unknown extern ABI 'system' — expected 'C' or bare extern
    |
 44 | extern "system" fn win_api(x: i64);
    |        ^^^^^^^^
error: at 45:8: [HTC-UnknownAbi] unknown extern ABI 'fastcall' — expected 'C' or bare extern
    |
 45 | extern "fastcall" fn stdcall_thing(y: i64);
    |        ^^^^^^^^^^
error: at 2:11: [HTC-AmbiguousType] type annotations needed: type of expression is ambiguous (could not resolve type variable in [?0; 0])
   |
 2 |   let x = [];
   |           ^^
